<resources>
    <string name="txt_version">App version: %s</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_">Email: %s</string>
    <string name="txt_company_name">Company name</string>
    <string name="txt_first_name">First name</string>
    <string name="txt_last_name">Last name</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_reset">Password Reset</string>
    <string name="txt_password_current">Current password</string>
    <string name="txt_password_new">New Password</string>
    <string name="txt_password_confirm">Confirm new password</string>
    <string name="txt_password_update">Update password</string>
    <string name="txt_year">Year</string>
    <string name="txt_month">Month</string>
    <string name="txt_national_id">National ID</string>
    <string name="txt_company_id">Company ID</string>
    <string name="txt_nssf">NSSF</string>
    <string name="txt_nhif">NHIF</string>
    <string name="txt_user">%s details</string>
    <string name="txt_user_type">Access level</string>
    <string name="txt_telephone">Telephone</string>
    <string name="txt_captured">Captured</string>
    <string name="txt_login">Login</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_register">New registration</string>
    <string name="txt_capture">Capture work</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_back">Back</string>
    <string name="txt_print_report">Print report</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_set_units">Set units</string>
    <string name="txt_search_by_name">Search by Name</string>
    <string name="txt_upload">Upload</string>
    <string name="txt_employees">Employees</string>
    <string name="txt_employees_view">View all employees</string>
    <string name="txt_employee">Employee</string>
    <string name="txt_select_file">Select a file to upload</string>
    <string name="txt_upload_employees">Upload all employees</string>
    <string name="txt_upload_work">Upload work for selected date</string>
    <string name="txt_add_rate">Add a new job rate</string>
    <string name="txt_update">Update</string>
    <string name="txt_set_job_type">Select a Job Type</string>
    <string name="txt_job_type">Job Type: %s</string>
    <string name="txt_job_rate">Rate: %s</string>
    <string name="txt_job_measured_in">Measured in: %s</string>
    <string name="txt_set_rate">Set a new rate</string>
    <string name="txt_set_measurement">Set measurement name (i.e Weight)</string>
    <string name="txt_save">Save</string>
    <string name="txt_sms">Send SMS</string>
    <string name="txt_bulk_sms">Send Bulk SMS</string>
    <string name="txt_bulk_sms_desc">Here is a list of numbers you will be sending out SMS\'s to. Make sure you have credit and that the numbers are valid. Once an SMS has been sent, the list will be updated. Do not navigate away while in progress</string>
    <string name="txt_report_query">Report Query</string>
    <string name="txt_select_report_type">Select report type</string>
    <string name="txt_select_an_employee">Select an Employee</string>
    <string name="txt_set_year">Set year</string>
    <string name="txt_set_month">Set month</string>
    <string name="txt_generate_report">Generate report</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_reports">Reports</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_add_">Add %s</string>
    <string name="txt_update_">Update %s</string>
    <string name="txt_edit">Edit company name</string>
    <string name="txt_manage_companies">Companies</string>
    <string name="warning_upload_work">Please note that YOU MUST have set the job rates before uploading the CSV file with the correct rate IDs obtained from Firebase. The Employee ID\'s will be obtained from your Employee upload CSV.</string>
    <string name="rules_upload_work">CSV format rules: \n \n- Each CSV file will contain work done by all employees for the specified year and month ONLY \n- The first row will be reserved for titles ONLY \n \n- The columns will be: \n\t\ta. Employee ID \n\t\tb. Job Rate ID (obtained from Firebase) \n\t\tc. All the days of the month always starting from 1</string>
    <string name="warning_upload_employees">Please note that YOU MUST have set UNIQUE EMPLOYEE ID\'s before uploading the CSV file</string>
    <string name="rules_upload_employees">CSV format rules: \n \n- Each CSV file will contain all employees ONLY \n- The first row will be reserved for titles ONLY \n \n- The columns will be: \n\t\ta. Employee ID (Unique ID numbers and letters) \n\t\tb. First name \n\t\tc. Last Name \n\t\td. National ID (Numbers ONLY) \n\t\te. Phone Number (Numbers ONLY starting with area code) \n\t\tf. NSSF \n\t\tg. NHIF</string>
    <string name="txt_set_default">Set as default</string>
    <string name="txt_start_date">Start date</string>
    <string name="txt_end_date">End date</string>

    <plurals name="plural_year">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>

    <plurals name="plural_month">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>

</resources>