<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.reports.ReportQueryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/page_guide_line"
        android:layout_marginEnd="@dimen/page_guide_line">

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:text="@string/txt_report_query" />

        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:text="@string/txt_select_report_type" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_report_type"
            style="@style/EditText" />

        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:text="@string/txt_start_date" />

        <TextView
            android:id="@+id/txt_start_date"
            style="@style/EditText"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/txt_end_date" />

        <TextView
            android:id="@+id/txt_end_date"
            style="@style/EditText"
            tools:ignore="Autofill,LabelFor"  />

        <Button
            android:id="@+id/btn_generate"
            style="@style/Button"
            android:enabled="false"
            android:text="@string/txt_generate_report" />

        <ke.co.shambapay.ui.widget.LoadingWidget
            android:id="@+id/widget_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>