<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.settings.SettingsUpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/page_guide_line"
        android:layout_marginStart="@dimen/page_guide_line"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:text="@string/txt_add_rate" />

        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:text="@string/txt_set_job_type" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_job_type"
            style="@style/EditText" />

        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:text="@string/txt_set_measurement" />

        <EditText
            style="@style/EditText"
            android:id="@+id/et_measured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_set_measurement"
            android:inputType="textAutoCorrect"
            tools:ignore="Autofill" />

        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:text="@string/txt_set_rate" />

        <EditText
            android:id="@+id/et_rate"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_set_rate"
            android:inputType="numberDecimal"
            android:digits=".0123456789"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_capture"
            style="@style/Button"
            android:enabled="false"
            android:text="@string/txt_add_rate" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Button"
            android:text="@string/txt_delete" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Button"
            android:text="@string/txt_cancel" />

        <ke.co.shambapay.ui.widget.LoadingWidget
            android:id="@+id/widget_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>