<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.employees.EmployeeUpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/page_guide_line"
        android:layout_marginEnd="@dimen/page_guide_line">

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:text="@string/txt_add_" />

        <include
            android:id="@+id/included"
            layout="@layout/layout_basic_info"/>

        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:text="@string/txt_national_id" />

        <EditText
            android:id="@+id/et_nid"
            style="@style/EditText"
            android:hint="@string/txt_national_id"
            android:inputType="phone"
            android:digits="0123456789"
            tools:ignore="Autofill" />

        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:text="@string/txt_nhif" />

        <EditText
            android:id="@+id/et_nhif"
            style="@style/EditText"
            android:hint="@string/txt_nhif"
            android:inputType="phone"
            android:digits="0123456789"
            tools:ignore="Autofill" />


        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:text="@string/txt_nssf" />

        <EditText
            android:id="@+id/et_nssf"
            style="@style/EditText"
            android:hint="@string/txt_nssf"
            android:inputType="phone"
            android:digits="0123456789"
            tools:ignore="Autofill" />


        <ke.co.shambapay.ui.widget.LoadingWidget
            android:id="@+id/widget_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/Button"
            android:enabled="false"
            android:text="@string/txt_add_" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Button"
            android:text="@string/txt_delete" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Button"
            android:text="@string/txt_cancel" />

    </LinearLayout>

</ScrollView>