<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        style="@style/TextNormal"
        android:layout_width="wrap_content"
        android:text="@string/txt_first_name" />

    <EditText
        android:id="@+id/et_first_name"
        style="@style/EditText"
        android:hint="@string/txt_first_name"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <TextView
        style="@style/TextNormal"
        android:layout_width="wrap_content"
        android:text="@string/txt_last_name" />

    <EditText
        android:id="@+id/et_last_name"
        style="@style/EditText"
        android:hint="@string/txt_last_name"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <TextView
        style="@style/TextNormal"
        android:layout_width="wrap_content"
        android:text="@string/txt_telephone" />

    <EditText
        android:id="@+id/et_telephone"
        style="@style/EditText"
        android:hint="@string/txt_telephone"
        android:inputType="phone"
        android:digits="0123456789"
        tools:ignore="Autofill" />

</LinearLayout>