<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/padding_medium"
    android:background="@drawable/background_border_green"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/page_guide_line" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/page_guide_line" />

    <TextView
        android:id="@+id/txt_job_rate"
        style="@style/TextNormalBold"
        android:layout_marginTop="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/txt_job_rate"/>

    <TextView
        android:id="@+id/txt_job_type"
        style="@style/TextNormalBold"
        android:paddingTop="@dimen/padding_medium"
        tools:text="@string/txt_job_type"
        android:text="@string/txt_upload"
        app:layout_constraintBottom_toTopOf="@+id/txt_job_measurement"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_job_measurement"
        style="@style/TextNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/padding_medium"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txt_job_type"
        android:text="@string/txt_job_measured_in" />

</androidx.constraintlayout.widget.ConstraintLayout>