<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ke.co.shambapay.ui.widget.UserWidget
            android:id="@+id/widgetUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ke.co.shambapay.ui.widget.BannerWidget
            android:id="@+id/banner_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:paddingEnd="@dimen/padding_large"
           android:paddingStart="@dimen/padding_large"
           android:layout_height="wrap_content">

           <EditText
               android:id="@+id/et_current_password"
               style="@style/EditText"
               android:hint="@string/txt_password_current"
               android:imeOptions="actionNext"
               android:inputType="textPassword"
               tools:ignore="Autofill" />

           <EditText
               android:id="@+id/et_new_password"
               style="@style/EditText"
               android:hint="@string/txt_password_new"
               android:imeOptions="actionNext"
               android:inputType="textPassword"
               tools:ignore="Autofill" />

           <EditText
               android:id="@+id/et_confirm_password"
               style="@style/EditText"
               android:hint="@string/txt_password_confirm"
               android:imeOptions="actionDone"
               android:inputType="textPassword"
               tools:ignore="Autofill" />

           <ke.co.shambapay.ui.widget.LoadingWidget
               android:id="@+id/widget_loading"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <Button
               android:id="@+id/btn_update"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:enabled="false"
               android:text="@string/txt_password_update" />

       </LinearLayout>


    </LinearLayout>

</ScrollView>