<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.login.PasswordResetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/page_guide_line"
        android:layout_marginEnd="@dimen/page_guide_line"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:text="@string/txt_password_reset" />

        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:text="@string/txt_email" />

        <EditText
            android:id="@+id/et_email"
            style="@style/EditText"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_password_reset"
            style="@style/Button"
            android:enabled="false"
            android:text="@string/txt_password_reset" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Button"
            android:text="@string/txt_cancel" />

        <ke.co.shambapay.ui.widget.LoadingWidget
            android:id="@+id/widget_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
