<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_large"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_title"
                style="@style/TextLarge"
                android:gravity="center"
                android:layout_width="match_parent"
                android:text="@string/txt_upload_employees" />


            <Button
                android:id="@+id/btn_select_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_marginBottom="@dimen/padding_large"
                android:enabled="true"
                android:text="@string/txt_select_file" />


            <TextView
                android:id="@+id/txt_message"
                style="@style/TextNormalBold"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_width="match_parent"
                android:gravity="center"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_marginBottom="@dimen/padding_large"
                android:enabled="false"
                android:text="@string/txt_upload" />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>